# cmd/gha-worker/main.go
@@ -3,12 +3,16 @@ package main
 import (
 	"context"
 	"flag"
+	"net/http"
+	"os"
+	"path/filepath"
 	"time"
 
 	"github.com/go-faster/errors"
 	"go.uber.org/zap"
 
 	"github.com/go-faster/gha/internal/app"
+	"github.com/go-faster/gha/internal/archive"
 	"github.com/go-faster/gha/internal/oas"
 )
 
@@ -24,12 +28,18 @@ func main() {
 		flag.StringVar(&arg.Addr, "addr", "http://localhost:8080", "http listen addr")
 		flag.Parse()
 
-		client, err := oas.NewClient(arg.Addr)
+		dl := archive.New(
+			http.DefaultClient,
+			filepath.Join(os.TempDir(), "github-archive"),
+			lg,
+		)
+
+		api, err := oas.NewClient(arg.Addr)
 		if err != nil {
 			return errors.Wrap(err, "create crient")
 		}
 
-		status, err := client.Status(ctx)
+		status, err := api.Status(ctx)
 		if err != nil {
 			return errors.Wrap(err, "status")
 		}
@@ -40,8 +50,8 @@ func main() {
 			if ctx.Err() != nil {
 				return ctx.Err()
 			}
-			job, err := client.Poll(ctx, oas.PollParams{
-				Token: arg.Token,
+			job, err := api.Poll(ctx, oas.PollParams{
+				XToken: arg.Token,
 			})
 			if err != nil {
 				lg.Error("Poll failed", zap.Error(err))
@@ -58,7 +68,70 @@ func main() {
 				lg.Info("Downloading",
 					zap.String("key", key),
 				)
-				time.Sleep(time.Second)
+
+				params := oas.ProgressParams{
+					XToken: arg.Token,
+				}
+				dlCtx, dlCancel := context.WithCancel(ctx)
+				p := &archive.Progress{
+					Cancel: dlCancel,
+				}
+				go func() {
+					t := time.NewTicker(time.Millisecond * 200)
+					defer t.Stop()
+					defer lg.Info("Done")
+					lastProgress := time.Now()
+					for {
+						select {
+						case <-dlCtx.Done():
+							return
+						case <-t.C:
+							wrote := p.Consume()
+							lg.Info("Progress",
+								zap.Float64("done", p.Ready()),
+								zap.Int64("wrote", wrote),
+							)
+							if wrote == 0 {
+								// No progress.
+								if time.Since(lastProgress) > time.Second*10 {
+									lg.Warn("No progress")
+									p.Cancel()
+								}
+								continue
+							}
+							lastProgress = time.Now()
+							report := oas.Progress{
+								Key: key,
+							}
+							if _, err := api.Progress(ctx, report, params); err != nil {
+								lg.Error("Failed to report progress", zap.Error(err))
+								dlCancel()
+								continue
+							}
+						}
+					}
+				}()
+				result, err := dl.Download(dlCtx, archive.Options{
+					Progress: p,
+					Key:      key,
+				})
+				if err != nil {
+					lg.Error("Failed to download", zap.Error(err))
+					continue
+				}
+
+				lg.Info("Downloaded", zap.String("path", result.Path))
+				if _, err := api.Progress(ctx, oas.Progress{
+					Done: true,
+					Key:  key,
+
+					SHA256Content: oas.NewOptString(result.SHA256Data),
+					SHA256Input:   oas.NewOptString(result.SHA256Input),
+					SHA256Output:  oas.NewOptString(result.SHA256Output),
+				}, params); err != nil {
+					lg.Error("Failed to report progress", zap.Error(err))
+					continue
+				}
 			}
 		}
 	})
