# internal/controller/controller.go
@@ -36,12 +36,50 @@ type Handler struct {
 	db *ent.Client
 }
 
+func (h Handler) Progress(ctx context.Context, req oas.Progress, params oas.ProgressParams) (oas.Status, error) {
+	if err := h.authToken(ctx, params.XToken); err != nil {
+		return oas.Status{}, err
+	}
+
+	h.lg.Info("Progress",
+		zap.String("key", req.Key),
+		zap.Bool("done", req.Done),
+	)
+
+	u := h.db.Chunk.Update().Where(
+		chunk.IDEQ(req.Key),
+	)
+
+	if req.Done {
+		if err := u.
+			SetSha256Input(req.SHA256Input.Value).
+			SetSha256Output(req.SHA256Output.Value).
+			SetSha256Content(req.SHA256Content.Value).
+			SetState(chunk.StateDownloaded).
+			SetNillableLeaseExpiresAt(nil).
+			Exec(ctx); err != nil {
+			return oas.Status{}, errors.Wrap(err, "update")
+		}
+		return oas.Status{Message: "ack done"}, nil
+	}
+
+	if err := u.
+		SetLeaseExpiresAt(time.Now().Add(time.Second * 15)).
+		Exec(ctx); err != nil {
+		return oas.Status{}, errors.Wrap(err, "update lease")
+	}
+
+	return oas.Status{Message: "ack"}, nil
+}
+
 func New(db *ent.Client, lg *zap.Logger) *Handler {
 	return &Handler{
 		lg: lg,
 		db: db,
 	}
 }
+
+var _ oas.Handler = (*Handler)(nil)
 
 func (h Handler) Run(ctx context.Context) error {
 	t := time.NewTicker(time.Second * 10)
@@ -78,10 +116,10 @@ func (h Handler) Run(ctx context.Context) error {
 
 }
 
-func (h Handler) Poll(ctx context.Context, params oas.PollParams) (oas.Job, error) {
-	w, err := h.db.Worker.Query().Where(worker.TokenEQ(params.Token)).Only(ctx)
+func (h Handler) authToken(ctx context.Context, tok string) error {
+	_, err := h.db.Worker.Query().Where(worker.TokenEQ(tok)).Only(ctx)
 	if ent.IsNotFound(err) {
-		return oas.Job{}, &oas.ErrorStatusCode{
+		return &oas.ErrorStatusCode{
 			StatusCode: 401,
 			Response: oas.Error{
 				Message: "Token not found",
@@ -89,10 +127,13 @@ func (h Handler) Poll(ctx context.Context, params oas.PollParams) (oas.Job, erro
 		}
 	}
 
-	lg := h.lg.With(
-		zap.String("worker_id", w.ID.String()),
-	)
-	lg.Info("Token found")
+	return nil
+}
+
+func (h Handler) Poll(ctx context.Context, params oas.PollParams) (oas.Job, error) {
+	if err := h.authToken(ctx, params.XToken); err != nil {
+		return oas.Job{}, err
+	}
 
 	tx, err := h.db.Tx(ctx)
 	if err != nil {
@@ -102,7 +143,10 @@ func (h Handler) Poll(ctx context.Context, params oas.PollParams) (oas.Job, erro
 
 	ch, err := tx.Chunk.Query().Where(
 		chunk.StateIn(chunk.StateNew),
-	).Limit(1).First(ctx)
+	).Limit(1).
+		ForUpdate().
+		First(ctx)
+
 	if err := ch.Update().
 		SetLeaseExpiresAt(time.Now().Add(time.Second * 30)).
 		SetState(chunk.StateDownloading).
@@ -115,6 +159,10 @@ func (h Handler) Poll(ctx context.Context, params oas.PollParams) (oas.Job, erro
 	if err := tx.Commit(); err != nil {
 		return oas.Job{}, errors.Wrap(err, "commit")
 	}
+
+	h.lg.Info("Scheduled job",
+		zap.String("key", ch.ID),
+	)
 
 	return oas.NewJobDownloadJob(oas.JobDownload{
 		Type: "download",
